--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="container">
-  <h1>🛸 Sci-Fi Day Scheduler</h1>
+  <h1>🛸 Infinite Loop Reminder Wisdom Core</h1>
 
   <div class="panel time-panel">
     <div id="currentTime" class="digital"></div>
