--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <link rel="stylesheet" href="style.css">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap');
-
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
 * {
   margin: 0;
   padding: 0;
