--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ button:hover {
 <body>
 
 <div class="container">
-  <h1>🛸 Purposeful Task Harmony</h1>
+  <h1>🛸 Do It Now</h1>
   <div id="successRateDisplay" class="digital" style="margin-bottom: 20px;"></div>
 
   <div class="panel time-panel">
@@ -230,13 +230,13 @@ const defaultTasks = [
     { name: "Learning Finance", time: "09:00", endTime: "10:30", done: false },
     { name: "Learning Marketing", time: "10:30", endTime: "12:00", done: false },
     { name: "Lunch Break", time: "12:00", endTime: "13:00", done: false },
-    { name: "Product Advertising Video for Stayoung", time: "13:00", endTime: "14:30", done: false },
+    { name: "Nihonify", time: "13:00", endTime: "14:30", done: false },
     { name: "Break", time: "14:30", endTime: "15:00", done: false },
-    { name: "Content for Smart Owl", time: "15:00", endTime: "16:00", done: false },
-    { name: "Content for Nihonify", time: "16:00", endTime: "17:00", done: false },
-    { name: "Content for DevPath", time: "17:00", endTime: "18:00", done: false },
-    { name: "Dinner Break", time: "18:00", endTime: "18:30", done: false },
-    { name: "Developing Software Products", time: "18:30", endTime: "20:30", done: false },
+    { name: "Smart Owl", time: "15:00", endTime: "16:00", done: false },
+    { name: "DevPath", time: "16:00", endTime: "17:00", done: false },
+    { name: "Learning IT", time: "17:00", endTime: "18:00", done: false },
+    { name: "Developing Software Products", time: "18:00", endTime: "18:30", done: false },
+    { name: "Dinner Time", time: "18:30", endTime: "20:30", done: false },
     { name: "Review and Plan", time: "20:30", endTime: "21:00", done: false },
     { name: "Wind Down", time: "21:00", endTime: "22:00", done: false },
     { name: "Bedtime", time: "22:00", endTime: "23:59", done: false }
