--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@ const defaultTasks = [
     { name: "Smart Owl", time: "15:00", endTime: "16:00", done: false },
     { name: "DevPath", time: "16:00", endTime: "17:00", done: false },
     { name: "Learning IT", time: "17:00", endTime: "18:00", done: false },
-    { name: "Developing Software Products", time: "18:00", endTime: "18:30", done: false },
-    { name: "Dinner Time", time: "18:30", endTime: "20:30", done: false },
+    { name: "Developing Software", time: "18:00", endTime: "19:00", done: false },
+    { name: "Dinner Time", time: "19:00", endTime: "20:30", done: false },
     { name: "Review and Plan", time: "20:30", endTime: "21:00", done: false },
     { name: "Wind Down", time: "21:00", endTime: "22:00", done: false },
     { name: "Bedtime", time: "22:00", endTime: "23:59", done: false }
