--- a/index.html
+++ b/index.html
@@ -230,7 +230,18 @@ const quoteDisplay = document.getElementById("quoteDisplay");
 
 // Array of motivational quotes
 const quotes = [
-    "The future depends on what you do today. - Mahatma Gandhi",
+    "Compare yourself to who you were yesterday, not to who someone else is today. - Jordan Peterson",
+    "When you have something to say, silence is a lie. - Jordan Peterson",
+    "To stand up straight with your shoulders back is to accept the terrible responsibility of life, with eyes wide open. - Jordan Peterson",
+    "You're going to pay a price for every bloody thing you do and everything you don't do. You get to choose which poison you're going to take. - Jordan Peterson",
+    "And if you think tough men are dangerous, wait until you see what weak men are capable of. - Jordan Peterson",
+    "The purpose of life is finding the largest burden that you can bear and bearing it. - Jordan Peterson",
+    "In order to be able to think, you have to risk being offensive. - Jordan Peterson",
+    "If you fulfill your obligations every day you don’t need to worry about the future. - Jordan Peterson",
+    "You must determine where you are going in your life, because you cannot get there unless you move in that direction. - Jordan Peterson",
+    "Don’t underestimate the power of vision and direction. These are irresistible forces, able to transform what might appear to be unconquerable obstacles into traversable pathways. - Jordan Peterson",
+    "Nobody loves you",
+    "Nobody cares about you",
     "You are never too old to set another goal or to dream a new dream. - C.S. Lewis",
     "Success is not final, failure is not fatal: It is the courage to continue that counts. - Winston Churchill",
     "The only way to do great work is to love what you do. - Steve Jobs",
