--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ button:hover {
 <body>
 
 <div class="container">
-  <h1>🛸 Do It Now</h1>
+  <h1>🛸 Do or Die</h1>
   <div id="successRateDisplay" class="digital" style="margin-bottom: 20px;"></div>
   <div id="quoteDisplay" class="panel quote-panel"></div>
   <div class="panel time-panel">
